AC_PREREQ([2.64])
AC_INIT([elf2aif],[0.05],[http://gccsdk.riscos.info/])

AC_CONFIG_HEADERS([config.h])

AC_PROG_CC

AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_HEADER_STDC
AC_CHECK_HEADERS([stddef.h stdint.h stdlib.h string.h])
AC_C_CONST

AC_CHECK_FUNCS([memset])

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
